fixing the missing images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img src="/images/hwl-logo.svg" alt="Herbert West Landscaping">
+            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -71,7 +71,7 @@
         <div class="row">
           <section class="col-lg-4 mb-3">
             <div class="card h-100">
-              <img src="/images/home/family-lambert.webp" class="card-img-top" alt="The insidious Lambert family">
+              <img src="./images/home/family-lambert.webp" class="card-img-top" alt="The insidious Lambert family">
               <div class="card-body">
                 <h3 class="card-title h4">The Lambert Family</h3>
                 <p class="card-text hanging">
@@ -82,7 +82,7 @@
           </section>
           <section class="col-lg-4 mb-3">
             <div class="card h-100">
-              <img src="/images/home/family-torrance.webp" class="card-img-top" alt="The shining bright Torrance family">
+              <img src="./images/home/family-torrance.webp" class="card-img-top" alt="The shining bright Torrance family">
               <div class="card-body">
                 <h3 class="card-title h4">The Torrance Family</h3>
                 <p class="card-text hanging">
@@ -94,7 +94,7 @@
           </section>
           <section class="col-lg-4 mb-3">
             <div class="card h-100">
-              <img src="/images/home/family-oswalt.webp" class="card-img-top" alt="The sinister Oswalt family">
+              <img src="./images/home/family-oswalt.webp" class="card-img-top" alt="The sinister Oswalt family">
               <div class="card-body">
                 <h3 class="card-title h4">The Oswalt Family</h3>
                 <p class="card-text hanging">
@@ -144,18 +144,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="./images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="./images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="./images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="./images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
