--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="/services/">Services</a>
+                <a class="nav-link active text-light" aria-current="page" href="./services/">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/projects/">Projects</a>
+                <a class="nav-link text-light" href="./projects/">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/products/">Products</a>
+                <a class="nav-link text-light" href="./products/">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/contact/">Contact</a>
+                <a class="nav-link text-light" href="./contact/">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
