fixing file paths on services index

--- a/services/index.html
+++ b/services/index.html
@@ -6,7 +6,7 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
 
 
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img src="/images/hwl-logo.svg" alt="Herbert West Landscaping">
+            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light active" href="/services/">Services</a>
+                <a class="nav-link text-light active" href="./services/">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" aria-current="page" href="/projects/">Projects</a>
+                <a class="nav-link text-light" aria-current="page" href="./projects/">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/products/">Products</a>
+                <a class="nav-link text-light" href="./products/">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/contact/">Contact</a>
+                <a class="nav-link text-light" href="./contact/">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -71,9 +71,9 @@
 
         <div class="row">
           <section class="col-lg-4 mb-3">
-            <a href="/services/lanscape-maintenance.html" class="text-decoration-none text-black">
+            <a href="./services/lanscape-maintenance.html" class="text-decoration-none text-black">
               <div class="card h-100">
-                <img src="/images/services/maintenance-full.webp" class="card-img-top" alt="Full Maintenance">
+                <img src="./images/services/maintenance-full.webp" class="card-img-top" alt="Full Maintenance">
                 <div class="card-body">
                   <h3 class="card-title h4">Landscape Maintenance</h3>
                   <p class="card-text">
@@ -87,7 +87,7 @@
           <section class="col-lg-4 mb-3">
 
             <div class="card h-100">
-              <img src="/images/services/seasonal-full.webp" class="card-img-top" alt="Full Seasonal">
+              <img src="./images/services/seasonal-full.webp" class="card-img-top" alt="Full Seasonal">
               <div class="card-body">
                 <h3 class="card-title h4">Seasonal</h3>
                 <p class="card-text">
@@ -98,9 +98,9 @@
 
           </section>
           <section class="col-lg-4 mb-3">
-            <a href="/services/custom-services.html" class="text-decoration-none text-black">
+            <a href="./services/custom-services.html" class="text-decoration-none text-black">
               <div class="card h-100">
-                <img src="/images/services/custom-full.webp" class="card-img-top" alt="Full Custom">
+                <img src="./images/services/custom-full.webp" class="card-img-top" alt="Full Custom">
                 <div class="card-body">
                   <h3 class="card-title h4">Custom Services</h3>
                   <p class="card-text">
@@ -152,18 +152,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="./images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="./images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="./images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="./images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
