fixing filepaths services index 2

--- a/services/index.html
+++ b/services/index.html
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light active" href="./services/">Services</a>
+                <a class="nav-link text-light active" href="./services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" aria-current="page" href="./projects/">Projects</a>
+                <a class="nav-link text-light" aria-current="page" href="./projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./products/">Products</a>
+                <a class="nav-link text-light" href="./products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./contact/">Contact</a>
+                <a class="nav-link text-light" href="./contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -47,7 +47,7 @@
       <div class="container-fluid">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-success"><a href="/" class="text-decoration-none text-success">Home</a></li>
+            <li class="breadcrumb-item text-success"><a href="./index.html" class="text-decoration-none text-success">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">Services</li>
           </ol>
         </nav>
