--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="./services/">Services</a>
+                <a class="nav-link active text-light" aria-current="page" href="./services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./projects/">Projects</a>
+                <a class="nav-link text-light" href="./projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./products/">Products</a>
+                <a class="nav-link text-light" href="./products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./contact/">Contact</a>
+                <a class="nav-link text-light" href="./contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
