--- a/services/custom-services.html
+++ b/services/custom-services.html
@@ -7,7 +7,7 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
 
   <body>
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
-            <img src="/images/hwl-logo.svg" alt="Herbert West Landscaping">
+            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light active" href="/services/">Services</a>
+                <a class="nav-link text-light active" href="./services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" aria-current="page" href="/projects/">Projects</a>
+                <a class="nav-link text-light" aria-current="page" href="./projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/products/">Products</a>
+                <a class="nav-link text-light" href="./products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="/contact/">Contact</a>
+                <a class="nav-link text-light" href="./contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -47,8 +47,8 @@
       <div class="container-fluid">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-success"><a href="/" class="text-decoration-none text-success">Home</a></li>
-            <li class="breadcrumb-item text-success" aria-current="page"><a href="/services/" class="text-decoration-none text-success">Services</a></li>
+            <li class="breadcrumb-item text-success"><a href="./index.html" class="text-decoration-none text-success">Home</a></li>
+            <li class="breadcrumb-item text-success" aria-current="page"><a href="./services/index.html" class="text-decoration-none text-success">Services</a></li>
             <li class="breadcrumb-item active" aria-current="page">Custom Services</li>
           </ol>
         </nav>
@@ -140,18 +140,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="./images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="./images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="./images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="./images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
