hopefull last filepath fix

--- a/services/lanscape-maintenance.html
+++ b/services/lanscape-maintenance.html
@@ -14,7 +14,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="./index.html">
             <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
       <div class="container-fluid">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-success"><a href="/" class="text-decoration-none text-success">Home</a></li>
+            <li class="breadcrumb-item text-success"><a href="./index.html" class="text-decoration-none text-success">Home</a></li>
             <li class="breadcrumb-item text-success" aria-current="page"><a href="./services/index.html" class="text-decoration-none text-success">Services</a></li>
             <li class="breadcrumb-item active" aria-current="page">Landscape Maintenance</li>
           </ol>
