--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="./services/index.html">Services</a>
+                <a class="nav-link text-light" aria-current="page" href="./services/index.html">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="./projects/index.html">Projects</a>
