--- a/products/seed.html
+++ b/products/seed.html
@@ -7,7 +7,7 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/workspaces/hw-lanscaping/css/main.css">
+    <link rel="stylesheet" href="/hw-lanscaping/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -15,8 +15,8 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">
-            <img src="./images/hwl-logo.svg" alt="Herbert West Landscaping">
+          <a class="navbar-brand" href="/hw-lanscaping/index.html">
+            <img src="/hw-lanscaping/images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,16 +24,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light" href="./services/index.html">Services</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/services/index.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./projects/index.html">Projects</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/projects/index.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light active" aria-current="page" href="./products/index.html">Products</a>
+                <a class="nav-link text-light active" aria-current="page" href="/hw-lanscaping/products/index.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="./contact/index.html">Contact</a>
+                <a class="nav-link text-light" href="/hw-lanscaping/contact/index.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -48,8 +48,8 @@
       <div class="container-fluid">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-success"><a href="./index.html" class="text-decoration-none text-success">Home</a></li>
-            <li class="breadcrumb-item text-success"><a href="./products/index.html" class="text-decoration-none text-success">Products</a></li>
+            <li class="breadcrumb-item text-success"><a href="/hw-lanscaping/index.html" class="text-decoration-none text-success">Home</a></li>
+            <li class="breadcrumb-item text-success"><a href="/hw-lanscaping/products/index.html" class="text-decoration-none text-success">Products</a></li>
             <li class="breadcrumb-item active" aria-current="page">Seed</li>
           </ol>
         </nav>
@@ -77,8 +77,8 @@
         </p>
         <div class="ratio ratio-16x9 mb-4">
           <video width="800" height="450" controls>
-            <source src="./video/seed.webm" type="video/webm">
-            <source src="./video/seed.mp4" type="video/mp4">
+            <source src="/hw-lanscaping/video/seed.webm" type="video/webm">
+            <source src="/hw-lanscaping/video/seed.mp4" type="video/mp4">
           </video>
         </div>
 
@@ -86,7 +86,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h4>A salesmen in the 1950s with one of our seeds</h4>
-            <img src="./images/products/seed-sales.webp" alt="Seed Sales" class="img-fluid">
+            <img src="/hw-lanscaping/images/products/seed-sales.webp" alt="Seed Sales" class="img-fluid">
             <p>
               Our salesmen have been hard at work since the 1950s. Back then, the seeds were a bit larger.
             </p>
@@ -94,7 +94,7 @@
           <div class="col-lg-6">
             <h4>Distributing seeds far & wide since 1956
             </h4>
-            <img src="./images/products/seed-distribution-1956.webp" alt="Seed Distribution 1956" class="img-fluid">
+            <img src="/hw-lanscaping/images/products/seed-distribution-1956.webp" alt="Seed Distribution 1956" class="img-fluid">
             <p>
               We started in a small town & took it over, & now we’re expanding throughout the U.S. & eventually around the entire world.
             </p>
@@ -144,18 +144,18 @@
           </h2>
           <ul class="list-inline">
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/facebook-hwl.svg" alt="Twitter" width="48" height="48">
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/mastodon-hwl.svg" alt="Mastodon" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/instagram-hwl.svg" alt="Instagram" width="48" height="48">
 
             </li>
             <li class="list-inline-item">
-              <img src="./images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
+              <img src="/hw-lanscaping/images/social-media-icons/linkedin-hwl.svg" alt="LinkedIn" width="48" height="48">
 
             </li>
           </ul>
