--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Herbert West Landscaping</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="hw-lanscaping/css/main.css">
+    <link rel="stylesheet" href="/hw-lanscaping/css/main.css">
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary bg-success">
         <div class="container-fluid">
           <a class="navbar-brand" href="/hw-lanscaping/index.html">
-            <img src="hw-lanscaping/images/hwl-logo.svg" alt="Herbert West Landscaping">
+            <img src="/hw-lanscaping/images/hwl-logo.svg" alt="Herbert West Landscaping">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
